# napari-tiff

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: index.md
napari_tiff/: __init__.py  napari.yaml  napari_tiff_colormaps.py  napari_tiff_metadata.py  napari_tiff_reader.py
napari_tiff/_tests/: test_data.py  test_pyramids.py  test_tiff_metadata.py  test_tiff_reader.py  test_tiff_reader_metadata.py
napari_tifffile/: __init__.py  tifffile.py
napari_tifffile/_tests/: test_tifffile.py
napari_tifffile_reader/: __init__.py  napari_tifffile_reader.py
napari_tifffile_reader/_tests/: test_tifffile_reader.py
src/napari_tiff/: napari.yaml  napari_tiff_colormaps.py  napari_tiff_metadata.py  napari_tiff_reader.py  napari_tiff_writer.py  napari_tiff_writter.py
test_data/: test_imagej.tiff  test_imagej_greyscale.tiff  test_imagej_with_time.tiff  test_ome.tiff  test_ome_with_time.tiff
tests/: base_data.py  conftest.py  test_tiff_metadata.py  test_tiff_reader.py  test_tiff_writer.py
