[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'napari-tiff'
description = 'official napari tiff reader and writer.'
readme = 'README.md'
dynamic = ['version']
authors = [
   {name = 'Genevieve Buckley'},
   {name = 'napari core developers', email = 'napari-core-devs@googlegroups.com'},
   {name = 'napari-tiff contributors'},
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'Intended Audience :: Education',
   'Intended Audience :: Science/Research',
   'Framework :: napari',
   'Programming Language :: Python',
   'Programming Language :: Python :: 3',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
   'Programming Language :: Python :: 3.13',
   'Topic :: Software Development :: Libraries',
   'Topic :: Scientific/Engineering',
   'Programming Language :: Python :: Implementation :: CPython',
   'Operating System :: OS Independent',
   'License :: OSI Approved :: BSD License',
]
requires-python = '>=3.10'
dependencies = [
   'numpy',
   'tifffile[codecs, zarr]>=2024.7.21',
]

[dependency-groups]
testing = [
   'napari',
   'pytest',
   'coverage',
]
tox = [
   'tox',
   'tox-gh-actions',
   'tox-uv',
]

[tools.setuptools]
include-package-data = true

[tools.setuptools.package-data]
napari-tiff = ['*napari.yaml']

[project.entry-points.'napari.manifest']
napari-tiff = 'napari_tiff:napari.yaml'

[project.license]
file = 'LICENSE'

[project.urls]
# homepage = ''
# documentation = ''
source = 'https://github.com/napari/napari-tiff'
tracker = 'https://github.com/napari/napari-tiff/issues'

[tool.setuptools_scm]
write_to = 'src/napari_tiff/_version.py'

[tool.coverage.run]
omit = [
    "src/*/_version.py",
]
source = [
    "src/napari_tiff",
    "tests"
]


[tool.coverage.paths]
source = [
    "src/napari_tiff/",
    "*/napari_tiff/",
    "*\\napari_tiff\\",
]
tests = [
    "tests/",
    "*/napari-tiff/tests/",
    "*\\napari-tiff\\tests\\",
]
